# URCABirds

./: .env.example  .gitignore  Dockerfile.worker  README.md  __main__.py  cache.db  compose.worker.yml  pyproject.toml  scheme.sql
.github/workflows/: api-deployment.yaml  dashboard-deployment.yml  deployment.yaml  worker-deployment copy.yaml
rapport/: README.md  rapport.qmd  rapport.typ  refs.bib
rapport/content/: cover.typ  note.typ
src/api/: .dockerignore  Dockerfile  README.md  __main__.py  app.py  config.py  pyproject.toml  scalar.html
src/api/components/: argument.py  auth.py  blueprint.py  errors.py  middleware.py  ratelimit.py  response.py  rules.py
src/api/models/components/: __init__.py  detection.py  sensor.py  species.py
src/api/models/exceptions/: badrequest.py  notfound.py  ratelimited.py  unauthorized.py
src/api/models/responses/: __init__.py  apikeys.py  detections.py  sensors.py  species.py  stats.py  status.py
src/api/routes/v1/: __init__.py
src/api/routes/v1/apikeys/: v1_apikeys.py
src/api/routes/v1/detections/: v1_detections.py
src/api/routes/v1/misc/: v1_misc.py
src/api/routes/v1/sensors/: v1_sensors.py
src/api/routes/v1/service/: v1_service.py
src/api/routes/v1/species/: v1_species.py
src/api/routes/v1/translations/: v1_translations.py
src/api/utils/: logger.py
src/dashboard/: .env.example  Dockerfile  api_client.py  app.py  pyproject.toml  views.py
src/dashboard/pages/: _i18n.py  _theme.py  audio.py  detections.py  movements.py  overview.py  sensors.py  species.py  trends.py
src/seed/: mapping.sql
(+17 files in other folders)
