[project]
name = "urcabirds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "asyncpg>=0.31.0",
    "birdnet>=0.2.5",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "sanic>=25.12.0",
    "sanic-ext",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
]

[tool.uv.sources]
sanic-ext = { git = "https://github.com/PaulBayfield/sanic-ext" }
