[project]
name = "dashboard"
version = "1.0.0"
description = "URCABirds Dashboard"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.58.0",
    "requests>=2.32.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "plotly>=6.6.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "audiomentations>=0.43.1",
]
